--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="project/style/normalize.css">
+    <link rel="stylesheet" href="project/style/style.css">
 </head>
 <body>
     <nav class="continer">
@@ -129,6 +129,6 @@
         </div>
     </div>
     <footer>Challenge by Frontend Mentor. Coded by NOUR DACI</footer>
-    <script src="js/script.js"></script>
+    <script src="project/js/script.js"></script>
 </body>
 </html>
